--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -21,5 +21,5 @@ jobs:
 
     steps:
     - name: Build with Maven
-      run: mvn -B test --file LoginTest.java
+      run: --file LoginTest.java
 
