--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Get Project Version from pom.xml         
+      uses: entimaniac/read-pom-version-action@1.0.0
+      
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
