--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -6,20 +6,30 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Test Selenium
-
+name: Selenium with TestNG
+ 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+ 
 jobs:
   build:
-
+ 
     runs-on: ubuntu-latest
-
+ 
     steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+     
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome --version
+     
     - name: Build with Maven
-      run: --file LoginTest.java
-
+      run: mvn -B clean test
