--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,18 +30,8 @@ jobs:
 
     - uses: actions/checkout@v2
     - run: ls -la
-    - name: Set up JDK 11
-
-      uses: actions/setup-java@v2
-
-      with:
-
-        java-version: '17'
-
-        distribution: 'adopt'
-
-        cache: maven
-
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome --version
+     
     - name: Build with Maven
-
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean test
