--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,29 +1,33 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+name: Selenium with Login test
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Selenium with TestNG
- 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
- 
+
 jobs:
+
   build:
- 
+
     runs-on: ubuntu-latest
- 
+
     steps:
-    - uses: actions/checkout@v3
-     
-    - uses: browser-actions/setup-chrome@latest
-    - run: chrome --version
-     
+
+    - uses: actions/checkout@v2
+
     - name: Build with Maven
+
       run: mvn -B clean test
+
+  test_1:
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - uses: actions/checkout@v3
+
+    - name: Test with Maven
+
+      run: mvn clean test
