--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -15,6 +15,13 @@ jobs:
     steps:
 
     - uses: actions/checkout@v2
+    - name: Install Google Chrome 
+
+      run: |
+
+              chmod +x ./scripts/InstallChrome.sh
+
+                          ./scripts/InstallChrome.sh 
 
     - name: Build with Maven
 
